--- a/k8s/pod/nova-compute-pod.yaml
+++ b/k8s/pod/nova-compute-pod.yaml
@@ -35,5 +35,7 @@ desiredState:
     id: nova-1
     version: v1beta1
 id: nova-compute
+apiVersion: v1beta1
+kind: Pod
 labels:
   name: nova-compute
